--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,12 +10,13 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.jupiter.version>5.0.0-M4</junit.jupiter.version>
-        <junit.platform.version>1.0.0-M4</junit.platform.version>
-        <log4j2.version>2.11.1</log4j2.version>
+        <junit.jupiter.version>5.7.1</junit.jupiter.version>
+        <junit.platform.version>1.3.2</junit.platform.version>
+        <log4j2.version>2.14.1</log4j2.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jline.version>3.9.0</jline.version>
+        <jline.version>3.19.0</jline.version>
         <jackson.version>2.10.1</jackson.version>
+        <fastutil.version>8.5.2</fastutil.version>
     </properties>
 
     <repositories>
@@ -41,19 +42,6 @@
         </repository>
     </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>releases</id>
-            <name>opencollab-releases</name>
-            <url>https://repo.opencollab.dev/maven-releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>opencollab-snapshots</name>
-            <url>https://repo.opencollab.dev/maven-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <dependencies>
         <!-- Annotations -->
         <dependency>
@@ -65,7 +53,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
+            <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
 
@@ -188,74 +176,74 @@
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-byte-sets</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-long-queues</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-int-int-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-int-short-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-long-long-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-long-int-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-long-byte-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-short-object-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-reference-int-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-int-reference-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-reference-reference-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-object-reference-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nukkitx.fastutil</groupId>
             <artifactId>fastutil-reference-object-maps</artifactId>
-            <version>8.3.1</version>
+            <version>${fastutil.version}</version>
         </dependency>
 
         <!-- Miscellaneous -->
         <dependency>
             <groupId>com.nukkitx.protocol</groupId>
-            <artifactId>bedrock-v422</artifactId>
-            <version>2.6.1-SNAPSHOT</version>
+            <artifactId>bedrock-v428</artifactId>
+            <version>2.6.3-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.nukkitx</groupId>
@@ -266,7 +254,7 @@
         <dependency>
             <groupId>com.nukkitx</groupId>
             <artifactId>block-state-updater</artifactId>
-            <version>1.16.20.2</version>
+            <version>1.16.210.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.nukkitx</groupId>
@@ -344,7 +332,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
@@ -357,7 +345,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -365,7 +353,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
+                <version>2.22.2</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
