--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Cloudburst</name>
-    <groupId>org.cloudburstmc</groupId>
-    <artifactId>cloudburst-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <name>Cookie</name>
+    <groupId>top.cookiestudio</groupId>
+    <artifactId>cookie</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <junit.platform.version>1.3.2</junit.platform.version>
         <log4j2.version>2.14.1</log4j2.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jline.version>3.19.0</jline.version>
         <jackson.version>2.10.1</jackson.version>
-        <fastutil.version>8.5.2</fastutil.version>
+        <fastutil.version>8.5.3</fastutil.version>
     </properties>
 
     <repositories>
@@ -239,11 +239,65 @@
             <version>${fastutil.version}</version>
         </dependency>
 
+        <!-- Daporkchop's dependencies -->
+        <dependency>
+            <groupId>net.daporkchop</groupId>
+            <artifactId>leveldb-mcpe-jni</artifactId>
+            <version>0.0.10-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-buffer</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.daporkchop.lib</groupId>
+            <artifactId>common</artifactId>
+            <version>0.5.5-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.daporkchop.lib</groupId>
+            <artifactId>natives</artifactId>
+            <version>0.5.5-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-buffer</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.daporkchop.lib</groupId>
+            <artifactId>noise</artifactId>
+            <version>0.5.5-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.daporkchop.lib</groupId>
+            <artifactId>math</artifactId>
+            <version>0.5.5-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.daporkchop.lib</groupId>
+            <artifactId>random</artifactId>
+            <version>0.5.5-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Miscellaneous -->
         <dependency>
             <groupId>com.nukkitx.protocol</groupId>
-            <artifactId>bedrock-v428</artifactId>
-            <version>2.6.3-SNAPSHOT</version>
+            <artifactId>bedrock-v431</artifactId>
+            <version>2.7.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.nukkitx</groupId>
@@ -276,26 +330,6 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
-        </dependency>
-        <dependency>
-            <groupId>net.daporkchop</groupId>
-            <artifactId>leveldb-mcpe-jni</artifactId>
-            <version>0.0.7-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>io.netty</groupId>
-                    <artifactId>netty-buffer</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>net.daporkchop.lib</groupId>
-            <artifactId>noise</artifactId>
-            <version>0.5.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
@@ -349,11 +383,16 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <release>${maven.compiler.target}</release>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <!-- 要使compilerVersion标签生效，还需要将fork设为true，用于明确表示编译版本配置的可用 -->
+                    <!-- To make the compilerVersion tag effective, you also need to set fork to true, which is used to clearly indicate that the compiled version configuration is available -->
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>2.22.1</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
