--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,8 +9,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.jupiter.version>5.0.0-M4</junit.jupiter.version>
-        <junit.platform.version>1.0.0-M4</junit.platform.version>
+        <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <jackson.version>2.10.1</jackson.version>
         <checkerframework.version>3.11.0</checkerframework.version>
     </properties>
@@ -143,6 +142,13 @@
                             <version>1.18.20</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
