--- a/api/pom.xml
+++ b/api/pom.xml
@@ -145,6 +145,7 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
@@ -155,7 +156,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <!-- DO NOT UPDATE: https://issues.apache.org/jira/projects/MJAVADOC/issues/MJAVADOC-673 -->
-                <version>3.0.1</version>
+                <version>3.2.0</version>
                 <configuration>
                     <source>16</source>
                     <release>16</release>
