--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,7 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <jackson.version>2.12.3</jackson.version>
-        <checkerframework.version>3.11.0</checkerframework.version>
+        <checkerframework.version>3.18.1</checkerframework.version>
     </properties>
 
     <repositories>
@@ -55,7 +55,7 @@
             <groupId>org.checkerframework</groupId>
             <artifactId>checker</artifactId>
             <version>${checkerframework.version}</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
 
         <!-- Testing -->
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>com.nukkitx</groupId>
             <artifactId>math</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1</version>
         </dependency>
 
         <dependency>
@@ -132,9 +132,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -142,24 +141,6 @@
                             <version>1.18.20</version>
                         </path>
                     </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <source>16</source>
-                    <release>16</release>
-                    <additionalOptions>--enable-preview</additionalOptions>
                 </configuration>
             </plugin>
         </plugins>
