--- a/pom.xml
+++ b/pom.xml
@@ -172,91 +172,16 @@
 
         <!-- Fastutil -->
         <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-byte-sets</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-long-queues</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-int-int-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-int-short-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-long-long-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-long-int-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-long-byte-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-short-object-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-reference-int-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-int-reference-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-reference-reference-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-object-reference-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-reference-object-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-long-object-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-int-object-maps</artifactId>
-            <version>${fastutil.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx.fastutil</groupId>
-            <artifactId>fastutil-object-int-maps</artifactId>
-            <version>${fastutil.version}</version>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>8.5.6</version>
         </dependency>
 
         <!-- Miscellaneous -->
         <dependency>
             <groupId>com.nukkitx.protocol</groupId>
             <artifactId>bedrock-v465</artifactId>
-            <version>2.9.0-SNAPSHOT</version>
+            <version>2.9.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.nukkitx</groupId>
@@ -280,24 +205,14 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.nukkitx</groupId>
-            <artifactId>natives</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-        <dependency>
             <groupId>com.spotify</groupId>
             <artifactId>completable-futures</artifactId>
             <version>0.3.2</version>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>29.0-jre</version>
-        </dependency>
-        <dependency>
             <groupId>net.daporkchop</groupId>
             <artifactId>leveldb-mcpe-jni</artifactId>
-            <version>0.0.7-SNAPSHOT</version>
+            <version>0.0.10-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
@@ -365,9 +280,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -375,14 +289,6 @@
                             <version>1.18.20</version>
                         </path>
                     </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
 <!--            <plugin>-->
@@ -485,16 +391,6 @@
                         <tags>false</tags>
                         <forceLongFormat>false</forceLongFormat>
                     </gitDescribe>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <source>16</source>
-                    <release>16</release>
-                    <additionalOptions>--enable-preview</additionalOptions>
                 </configuration>
             </plugin>
         </plugins>
